# Monitor-AI-Assistant

./: .gitignore  BUILD.md  BUILD_SUMMARY.md  CLEANUP.md  COMPLETION_REPORT.md  DEPENDENCIES.md  EXTRAS.md  GRAPH_ANALYSIS.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MonitorAI.spec  README.md  ai_processor.py  answer_window.py  build.bat  build.cfg  build.ps1  config.py  graph_analysis_examples.py  install_tesseract.py  main.py  ocr_processor.py  pyproject.toml  requirements.txt  run.py  verify_setup.py
.claude/: settings.local.json
.github/workflows/: build.yml
MONITOR-AI-ASSISTANT/src/: ai_processor.py
hooks/: hook-paddleocr.py
src/: ai_processor.py  answer_window.py  config.py  graph_analyzer.py  local_llm.py  main.py  ocr_processor.py  screen_capture.py  ui_module.py.bak  vision_llm.py
tests/: test_ai.py  test_graph_analyzer.py  test_ocr.py
