[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-ai-assistant"
version = "0.1.0"
description = "Monitor AI Assistant application"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]


# pyproject.toml
[tool.poetry.dependencies]
python = "^3.8"
paddleocr = "^2.3.0"
llama-cpp-python = "^0.2.23"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
mss = "^7.0.1"
screeninfo = "^0.8.1"
numpy = "^1.24.0"
