[tool.poetry]
name = "monitor-ai-assistant"
version = "0.1.0"
description = "A tool that captures information from one monitor, solves problems or questions, and displays the answers on a second monitor."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.10"
openai = "^0.27.0"
llama-cpp-python = "^0.2.23"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
mss = "^7.0.1"
screeninfo = "^0.8.1"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"